--- a/.github/workflows/flux-diff.yaml
+++ b/.github/workflows/flux-diff.yaml
@@ -17,8 +17,9 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.changed-clusters.outputs.all_changed_and_modified_files }}
+      github-token: ${{ steps.app-token.outputs.token }}
     steps:
-      - name: Configure 1password
+      - name: Configure 1Password
         uses: 1password/load-secrets-action/configure@v2
         with:
           service-account-token: ${{ secrets.ONEPASS_SA_TOKEN }}
@@ -69,37 +70,19 @@ jobs:
         resources: ["helmrelease", "kustomization"]
       max-parallel: 4
       fail-fast: false
+    env:
+      GITHUB_TOKEN: ${{ needs.changed-clusters.outputs.github-token }}
     steps:
-      - name: Configure 1password
-        uses: 1password/load-secrets-action/configure@v2
-        with:
-          service-account-token: ${{ secrets.ONEPASS_SA_TOKEN }}
-
-      - name: Get Secrets
-        uses: 1password/load-secrets-action@v2
-        with:
-          export-env: true
-        env:
-          BOT_APP_ID: op://Kubernetes/github-bot/BOT_APP_ID
-          BOT_APP_PRIVATE_KEY: op://Kubernetes/github-bot/BOT_APP_PRIVATE_KEY
-
-      - name: Generate Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ env.BOT_APP_ID }}
-          private-key: ${{ env.BOT_APP_PRIVATE_KEY }}
-
       - name: Checkout Pull Request Branch
         uses: actions/checkout@v4
         with:
-          token: "${{ steps.app-token.outputs.token }}"
+          token: ${{ env.GITHUB_TOKEN }}
           path: pull
 
       - name: Checkout Default Branch
         uses: actions/checkout@v4
         with:
-          token: ${{ steps.app-token.outputs.token }}
+          token: ${{ env.GITHUB_TOKEN }}
           ref: ${{ github.event.repository.default_branch }}
           path: default
 
@@ -137,7 +120,7 @@ jobs:
         name: Add comment
         uses: mshick/add-pr-comment@v2
         with:
-          repo-token: ${{ steps.app-token.outputs.token }}
+          repo-token: ${{ env.GITHUB_TOKEN }}
           message-id: ${{ github.event.pull_request.number }}/${{ matrix.paths }}/${{ matrix.resources }}
           message-failure: Diff was not successful
           message: |
