feat: migrate to secret in ns

--- a/kubernetes/main/apps/database/crunchy-postgres/ks.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/ks.yaml
@@ -44,7 +44,8 @@ spec:
   postBuild:
     substituteFrom:
       - kind: Secret
-        name: cluster-secrets
+        name: crunchy-postgres-r2
+        optional: false
 ---
 # yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
