--- a/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
@@ -164,7 +164,7 @@ spec:
         - name: repo2
           s3: &r2
             bucket: crunchy-pgo
-            endpoint: ${CLOUDFLARE_ACCOUNT_ID}.r2.cloudflarestorage.com
+            endpoint: ${R2_ENDPOINT}
             region: us-east-1 #https://developers.cloudflare.com/r2/api/s3/api/#bucket-region
           schedules:
             full: "30 2 * * 0" # Sunday at 02:30
