--- a/kubernetes/main/apps/database/crunchy-postgres/app/externalsecret.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/app/externalsecret.yaml
@@ -4,6 +4,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: &name crunchy-postgres-r2
+  namespace: flux-system #because the kustomization lives in flux-system
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
