fix: move to flux-system ns

--- a/kubernetes/main/apps/flux-system/flux-operator/instance/externalsecret.yaml
+++ b/kubernetes/main/apps/flux-system/flux-operator/instance/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name cluster-secrets
+  name: &name crunchy-postgres-r2
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
@@ -12,7 +12,7 @@ spec:
     name: *name
     template:
       data:
-        CLOUDFLARE_ACCOUNT_ID: "{{ .CLOUDFLARE_ACCOUNT_TAG }}"
+        R2_ENDPOINT: "{{ .R2_ENDPOINT }}"
   dataFrom:
-  - extract:
-      key: cloudflare
+    - extract:
+        key: cloudflare
