--- a/kubernetes/main/apps/database/crunchy-postgres/cluster/externalsecret.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/cluster/externalsecret.yaml
@@ -17,6 +17,8 @@ spec:
           [global]
           repo2-s3-key={{ .R2_ACCESS_KEY_ID }}
           repo2-s3-key-secret={{ .R2_SECRET_ACCESS_KEY }}
+          repo3-s3-key={{ .AWS_ACCESS_KEY_ID }}
+          repo3-s3-key-secret={{ .AWS_SECRET_ACCESS_KEY }}
         encryption.conf: |
           [global]
           repo1-cipher-pass={{ .CRUNCHY_PGO_CIPHER_PASS }}
@@ -26,5 +28,5 @@ spec:
         key: cloudflare
     - extract:
         key: crunchy-pgo
-    # - extract:
-    #     key: postgresql-bucket
+    - extract:
+        key: postgresql-bucket
