--- a/kubernetes/main/bootstrap/helmfile.yaml
+++ b/kubernetes/main/bootstrap/helmfile.yaml
@@ -54,7 +54,7 @@ releases:
     values:
       - ./templates/wipe-rook.yaml.gotmpl
     needs:
-      - kube-system/spegel
+      - kube-tools/spegel
 
   - name: flux-operator
     namespace: flux-system
