--- a/kubernetes/utility/bootstrap/helmfile.yaml
+++ b/kubernetes/utility/bootstrap/helmfile.yaml
@@ -14,6 +14,9 @@ repositories:
   - name: coredns
     url: https://coredns.github.io/helm
 
+  - name: jetstack
+    url: https://charts.jetstack.io
+
 releases:
   - name: kube-prometheus-stack-crds
     namespace: observability
@@ -38,6 +41,15 @@ releases:
     needs:
       - kube-system/cilium
 
+  - name: cert-manager
+    namespace: cert-manager
+    chart: jetstack/cert-manager
+    version: v1.16.3
+    values:
+      - ../apps/cert-manager/cert-manager/app/helm-values.yaml
+    needs:
+      - kube-system/coredns
+
   - name: wipe-rook
     namespace: kube-system
     chart: oci://ghcr.io/bjw-s/helm/app-template
@@ -45,7 +57,7 @@ releases:
     values:
       - ./templates/wipe-rook.yaml.gotmpl
     needs:
-      - kube-system/coredns
+      - kube-system/cert-manager
 
   - name: flux-operator
     namespace: flux-system
