fix(gha): token pass 2 - electric bugaloo

--- a/.github/workflows/flux-diff.yaml
+++ b/.github/workflows/flux-diff.yaml
@@ -70,19 +70,17 @@ jobs:
         resources: ["helmrelease", "kustomization"]
       max-parallel: 4
       fail-fast: false
-    env:
-      GITHUB_TOKEN: ${{ needs.changed-clusters.outputs.github-token }}
     steps:
       - name: Checkout Pull Request Branch
         uses: actions/checkout@v4
         with:
-          token: ${{ env.GITHUB_TOKEN }}
+          token: ${{ needs.changed-clusters.outputs.github-token }}
           path: pull
 
       - name: Checkout Default Branch
         uses: actions/checkout@v4
         with:
-          token: ${{ env.GITHUB_TOKEN }}
+          token: ${{ needs.changed-clusters.outputs.github-token }}
           ref: ${{ github.event.repository.default_branch }}
           path: default
 
