--- a/.github/workflows/bulk-merge-prs.yaml
+++ b/.github/workflows/bulk-merge-prs.yaml
@@ -19,22 +19,12 @@
       name: Bulk Merge PRs
       runs-on: ubuntu-latest
       steps:
-        - name: Get Secrets
-          uses: 1password/load-secrets-action@v2
-          with:
-            export-env: true
-          env:
-            OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.ONEPASS_SA_TOKEN }}
-            BOT_APP_ID: op://Kubernetes/github-bot/BOT_APP_ID
-            BOT_APP_PRIVATE_KEY: op://Kubernetes/github-bot/BOT_APP_PRIVATE_KEY
-            BOT_USERNAME: op://Kubernetes/github-bot/BOT_USERNAME
-
         - name: Generate Token
           uses: actions/create-github-app-token@v1
           id: app-token
           with:
-            app-id: ${{ env.BOT_APP_ID }}
-            private-key: ${{ env.BOT_APP_PRIVATE_KEY }}
+            app-id: ${{ secrets.BOT_APP_ID }}
+            private-key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
 
         - name: Checkout
           uses: actions/checkout@v4
