--- a/kubernetes/main/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/plex/app/helmrelease.yaml
@@ -41,7 +41,7 @@ spec:
               tag: 1.41.3.9314-a0bfb8370@sha256:533822d6ddce6657df67fe92be5de0d4c6f8806488befa330dc297f568d3f01c
             env:
               TZ: ${TIMEZONE}
-              PLEX_ADVERTISE_URL: https://plex.jory.dev:443,http://${SVC_PLEX_ADDR}:32400
+              PLEX_ADVERTISE_URL: https://plex.jory.dev:443,http://10.69.1.35:32400
               PLEX_NO_AUTH_NETWORKS: ${NODE_CIDR},${TRUSTED_CIDR}
             probes:
               liveness: &probes
