--- a/kubernetes/main/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/plex/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
             env:
               TZ: ${TIMEZONE}
               PLEX_ADVERTISE_URL: https://plex.jory.dev:443,http://10.69.1.35:32400
-              PLEX_NO_AUTH_NETWORKS: ${NODE_CIDR},${TRUSTED_CIDR}
+              PLEX_NO_AUTH_NETWORKS: 10.42.0.0/16,192.168.30.0/24
             probes:
               liveness: &probes
                 enabled: true
