fix(flux): replace timezone value

--- a/kubernetes/main/apps/downloads/kapowarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/kapowarr/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
               repository: mrcas/kapowarr
               tag: v1.0.0@sha256:a7af9a25d3fadccec768ec53434361f0fc3bcc90bb9a9ca2b0fde7aeaafdf3bf
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
             resources:
               requests:
                 cpu: 15m
