--- a/kubernetes/main/apps/downloads/prowlarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/prowlarr/app/helmrelease.yaml
@@ -37,7 +37,7 @@ spec:
               repository: ghcr.io/joryirving/prowlarr-develop
               tag: 1.30.0.4920@sha256:5ea1a0777d1002f7b3287e7b4699b64bac84f537c998ca18d8cbb342275e5f6a
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
               PROWLARR__APP__INSTANCENAME: Prowlarr
               PROWLARR__APP__THEME: dark
               PROWLARR__AUTH__METHOD: External
