--- a/kubernetes/main/apps/downloads/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/qbittorrent/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
               repository: ghcr.io/joryirving/qbittorrent-beta
               tag: 5.0.3@sha256:db3942e87117e9a7ff2ea0031ed2b1a117cbd0f5a9684a66600a3edd9ad38791
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
               QBT_WEBUI_PORT: &port 80
               QBT_TORRENTING_PORT: &torrentPort 50413
             probes:
