--- a/kubernetes/main/apps/downloads/radarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/radarr/app/helmrelease.yaml
@@ -48,7 +48,7 @@ spec:
               RADARR__LOG__LEVEL: info
               RADARR__SERVER__PORT: &port 80
               RADARR__UPDATE__BRANCH: develop
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
             envFrom:
             - secretRef:
                 name: radarr-secret
