--- a/kubernetes/main/apps/downloads/recyclarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/recyclarr/app/helmrelease.yaml
@@ -37,7 +37,7 @@ spec:
               repository: ghcr.io/recyclarr/recyclarr
               tag: 7.4.0@sha256:619c3b8920a179f2c578acd0f54e9a068f57c049aff840469eed66e93a4be2cf
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
             envFrom:
               - secretRef:
                   name: recyclarr-secret
