--- a/kubernetes/main/apps/downloads/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/sabnzbd/app/helmrelease.yaml
@@ -39,7 +39,7 @@ spec:
               repository: ghcr.io/joryirving/sabnzbd
               tag: 4.4.1@sha256:6a9bcad811f862f673a88a10f47f481fbfa2357f1ea44637c6234f1a295f1702
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
               SABNZBD__PORT: &port 8080
               SABNZBD__HOST_WHITELIST_ENTRIES: >-
                 sabnzbd, sabnzbd.downloads, sabnzbd.downloads.svc, sabnzbd.downloads.svc.cluster, sabnzbd.downloads.svc.cluster.local, sabnzbd.jory.dev
