--- a/kubernetes/main/apps/flux-system/clickops/app/helmrelease.yaml
+++ b/kubernetes/main/apps/flux-system/clickops/app/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
               repository: ghcr.io/whazor/clickops
               tag: v0.0.2@sha256:ca764fc302afd14e0aa31b2195bc2ee1a9ddf53d32aa046abd6137973018865d
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
               # not used
               __PORT: &port 3000
               __HOST: &host "clickops.jory.dev"
