--- a/kubernetes/main/apps/games/palworld/app/helmrelease.yaml
+++ b/kubernetes/main/apps/games/palworld/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
               tag: master@sha256:92693701a6a0559e87a8fcb2113d8f317264ed5dc77f610296c48eb448aa8dbd
             env:
               ## Container Settings
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
               ALWAYS_UPDATE_ON_START: true
               BACKUP_ENABLED: false #volsync is backing up the PVC
               RESTART_ENABLED: false #no one is playing right now.
@@ -79,7 +79,7 @@ spec:
               tag: v1.3.1
             env:
               ## Container Settings
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
               RCON_HOST: localhost
               RCON_PORT: *rcon-port
               SAVE_DIRECTORY: /palworld
