--- a/kubernetes/main/apps/games/vrising/app/helmrelease.yaml
+++ b/kubernetes/main/apps/games/vrising/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
               tag: 2.1
             env:
               ## Container Settings
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
               SERVERNAME: "Smurf-Rising"
               GAMEPORT: &game 9876
               QUERYPORT: &query 9877
