--- a/kubernetes/main/apps/media/komga/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/komga/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
               repository: gotson/komga
               tag: "1.18.0@sha256:0997326496bb29cd6299ffab6cf1ca20490a3da3b240cd47c3c4e1aa67dbcf97"
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
               SERVER_PORT: &port 8080
             resources:
               requests:
