--- a/kubernetes/main/apps/media/maintainerr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/maintainerr/app/helmrelease.yaml
@@ -36,7 +36,7 @@ spec:
               repository: ghcr.io/jorenn92/maintainerr
               tag: 2.8.0@sha256:b160b782c46e2d9012afc8affafc5b67a7a0a26a4955922118402d781a49be36
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
             probes:
               liveness:
                 enabled: true
