--- a/kubernetes/main/apps/media/plex/movie-roulette/helmrelease.yaml
+++ b/kubernetes/main/apps/media/plex/movie-roulette/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
               PLEX_URL: https://plex.jory.dev
               PLEX_MOVIE_LIBRARIES: "Movies" #Default movies, add more with comma delimiter A,B,C
               #Poster ENV
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
               DEFAULT_POSTER_TEXT: "Smurf Cinema"
               #Client ENV
               # APPLE_TV_ID: "" #https://github.com/sahara101/Movie-Roulette#apple-tv
