--- a/kubernetes/utility/apps/self-hosted/free-game-notifier/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/self-hosted/free-game-notifier/app/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
               repository: ghcr.io/joryirving/free-game-notifier
               tag: 1.6.0@sha256:96ca95ac7e1bbc606df36ad9ba2a4b6e6560f48807019bc8289ba8fb9d8824cf
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
               SEND_UPCOMING: false
             envFrom:
               - secretRef:
