--- a/kubernetes/utility/apps/self-hosted/it-tools/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/self-hosted/it-tools/app/helmrelease.yaml
@@ -39,7 +39,7 @@ spec:
               repository: ghcr.io/joryirving/it-tools
               tag: 2024.10.22@sha256:71d53005f9147a320078aa8e88026bf39649ce7e30cfdd828eaf31aefb3fcea3
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
             resources:
               requests:
                 cpu: 5m
