--- a/kubernetes/main/apps/downloads/bazarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/bazarr/app/helmrelease.yaml
@@ -40,7 +40,7 @@ spec:
               repository: ghcr.io/joryirving/bazarr
               tag: 1.5.1@sha256:21ab157dbf3e3da18b989ac26d2f8c9b90f58a62843a8fa878afbe1eda58551d
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
             envFrom:
             - secretRef:
                 name: bazarr-secret
