--- a/kubernetes/main/apps/downloads/bazarr/whisper/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/bazarr/whisper/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
               repository: onerahmet/openai-whisper-asr-webservice
               tag: v1.7.1@sha256:9c2d9b93137067377044928ebd0766b747283c7f1416a85e05b0eb97998ddfe0
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
               ASR_MODEL: small # tiny, base, small, medium, large, large-v1, large-v2 and large-v3
               ASR_ENGINEL: faster_whisper # openai_whisper, faster_whisper
             resources:
