--- a/kubernetes/main/apps/downloads/mylar/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/mylar/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
               repository: ghcr.io/linuxserver/mylar3
               tag: version-v0.8.1@sha256:90ea9825c49c63f28a25b843fe77c9706d1abf9e51a34fc21b7ec2dada5b1c7d
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
               UID: 1000
               GID: 1000
             resources:
