--- a/kubernetes/main/apps/downloads/readarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/readarr/app/helmrelease.yaml
@@ -48,7 +48,7 @@ spec:
               READARR__LOG__LEVEL: info
               READARR__SERVER__PORT: &port 80
               READARR__UPDATE__BRANCH: develop
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
             envFrom:
             - secretRef:
                 name: readarr-secret
