--- a/kubernetes/main/apps/downloads/sonarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/sonarr/app/helmrelease.yaml
@@ -47,7 +47,7 @@ spec:
               SONARR__LOG__LEVEL: info
               SONARR__SERVER__PORT: &port 80
               SONARR__UPDATE__BRANCH: develop
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
             envFrom:
             - secretRef:
                 name: sonarr-secret
