--- a/kubernetes/main/apps/games/core-keeper/app/helmrelease.yaml
+++ b/kubernetes/main/apps/games/core-keeper/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
               tag: latest #yuck
             env:
               ## Container Settings
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
               # WORLD_INDEX: "0" # Which world index to use.
               WORLD_NAME: Noods Core Keeper # The name to use for the server.
               # WORLD_SEED: "0" # The seed to use for a new world. Set to 0 to generate random seed.
