--- a/kubernetes/main/apps/media/kavita/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/kavita/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
               repository: ghcr.io/kareadita/kavita
               tag: 0.8.4@sha256:07393ed7d6860e7312c0197b8c1ebcd4d53c52b7cabd542db08613410ff22c69
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
             resources:
               requests:
                 cpu: 15m
