--- a/kubernetes/main/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/plex/app/helmrelease.yaml
@@ -40,7 +40,7 @@ spec:
               repository: ghcr.io/joryirving/plex
               tag: 1.41.3.9314-a0bfb8370@sha256:533822d6ddce6657df67fe92be5de0d4c6f8806488befa330dc297f568d3f01c
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
               PLEX_ADVERTISE_URL: https://plex.jory.dev:443,http://10.69.1.35:32400
               PLEX_NO_AUTH_NETWORKS: 10.42.0.0/16,192.168.30.0/24
             probes:
