--- a/kubernetes/main/apps/media/tautulli/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/tautulli/app/helmrelease.yaml
@@ -36,7 +36,7 @@ spec:
               repository: ghcr.io/joryirving/tautulli
               tag: 2.15.1@sha256:41803ab5e36a7139d98a4fef25ca7c525b4e13bbeba441c269518cb39c18cfde
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
               TAUTULLI__PORT: &port 80
             probes:
               liveness: &probes
