--- a/kubernetes/main/apps/observability/exporters/speedtest-exporter/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/exporters/speedtest-exporter/app/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
               repository: ghcr.io/miguelndecarvalho/speedtest-exporter
               tag: v3.5.4
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
             resources:
               requests:
                 cpu: 15m
