--- a/kubernetes/utility/apps/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/home-automation/home-assistant/app/helmrelease.yaml
@@ -36,7 +36,7 @@ spec:
               repository: ghcr.io/joryirving/home-assistant
               tag: 2025.1.2@sha256:1b1c6fe7bdf4de50b033fc6c76cf09c4b8d424facb7fb13df58e4bbb86746ea3
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
@@ -52,7 +52,7 @@ spec:
               repository: ghcr.io/coder/code-server
               tag: 4.96.2@sha256:6b8c0e944caec80057e71d2c2f352cee38fe00ae4b7515fc4458eb300844f699
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Edmonton
             args: [
               "--auth", "none",
               "--user-data-dir", "/config/.vscode",
