feat: rename cluster-settings

--- a/kubernetes/main/flux/settings/cluster-settings.yaml
+++ b/kubernetes/main/flux/settings/cluster-settings.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: cluster-settings-main
+  name: cluster-settings
 data:
   ## Main cluster settings
   CLUSTER: main
