--- a/kubernetes/utility/flux/settings/cluster-settings.yaml
+++ b/kubernetes/utility/flux/settings/cluster-settings.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: cluster-settings-utility
+  name: cluster-settings
 data:
   ## Utility cluster settings
   CLUSTER: utility
