--- a/kubernetes/utility/apps/flux-system/tofu-controller/app/externalsecret.yaml
+++ b/kubernetes/utility/apps/flux-system/tofu-controller/app/externalsecret.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
-    name: onepassword-connect
+    name: onepassword
   target:
     name: *name
     template:
@@ -26,7 +26,7 @@ metadata:
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
-    name: onepassword-connect
+    name: onepassword
   target:
     name: *name
     template:
