feat: update ks name

--- a/kubernetes/main/apps/downloads/radarr/ks.yaml
+++ b/kubernetes/main/apps/downloads/radarr/ks.yaml
@@ -13,7 +13,7 @@ spec:
   dependsOn:
     - name: crunchy-postgres-operator-cluster
     - name: crunchy-postgres-stores
-    - name: external-secrets-stores
+    - name: onepassword-store
   path: ./kubernetes/main/apps/downloads/radarr/app
   prune: true
   sourceRef:
