--- a/kubernetes/main/apps/downloads/bazarr/ks.yaml
+++ b/kubernetes/main/apps/downloads/bazarr/ks.yaml
@@ -13,7 +13,7 @@ spec:
   dependsOn:
     - name: crunchy-postgres-operator-cluster
     - name: crunchy-postgres-stores
-    - name: external-secrets-stores
+    - name: onepassword-store
     - name: volsync
   path: ./kubernetes/main/apps/downloads/bazarr/app
   prune: true
