--- a/kubernetes/main/apps/external-secrets/onepassword/ks.yaml
+++ b/kubernetes/main/apps/external-secrets/onepassword/ks.yaml
@@ -3,16 +3,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app actions-runner-controller
+  name: &app onepassword
   namespace: flux-system
 spec:
-  targetNamespace: actions-runner-system
+  targetNamespace: external-secrets
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-    - name: onepassword-store
-  path: ./kubernetes/main/apps/actions-runner-system/actions-runner-controller/app
+  path: ./kubernetes/main/apps/external-secrets/onepassword/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -25,18 +23,20 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app actions-runner-controller-runners
+  name: &app external-secrets-stores
   namespace: flux-system
 spec:
-  targetNamespace: actions-runner-system
+  targetNamespace: external-secrets
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  path: ./kubernetes/main/apps/actions-runner-system/actions-runner-controller/runners
+  dependsOn:
+    - name: onepassword
+  path: ./kubernetes/main/apps/external-secrets/onepassword/stores
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  wait: false
+  wait: true
   interval: 30m
   timeout: 5m
