--- a/kubernetes/main/apps/self-hosted/lubelog/ks.yaml
+++ b/kubernetes/main/apps/self-hosted/lubelog/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: external-secrets-stores
+    - name: onepassword-store
     - name: volsync
   path: ./kubernetes/main/apps/self-hosted/lubelog/app
   prune: true
