--- a/kubernetes/utility/apps/cert-manager/cert-manager/ks.yaml
+++ b/kubernetes/utility/apps/cert-manager/cert-manager/ks.yaml
@@ -54,7 +54,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cert-manager-issuers
-    - name: external-secrets-stores
+    - name: onepassword-store
   path: ./kubernetes/utility/apps/cert-manager/cert-manager/tls
   prune: true
   sourceRef:
