--- a/kubernetes/main/apps/external-secrets/onepassword/app/helmrelease.yaml
+++ b/kubernetes/main/apps/external-secrets/onepassword/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: onepassword-connect
+  name: &app onepassword
 spec:
   interval: 30m
   chart:
@@ -24,7 +24,7 @@ spec:
       retries: 3
   values:
     controllers:
-      onepassword-connect:
+      onepassword:
         strategy: RollingUpdate
         annotations:
           reloader.stakater.com/auto: "true"
@@ -41,7 +41,7 @@ spec:
               OP_SESSION:
                 valueFrom:
                   secretKeyRef:
-                    name: onepassword-connect-secret
+                    name: *app
                     key: 1password-credentials.json
             probes:
               liveness:
@@ -83,7 +83,7 @@ spec:
               OP_SESSION:
                 valueFrom:
                   secretKeyRef:
-                    name: onepassword-connect-secret
+                    name: *app
                     key: 1password-credentials.json
             probes:
               liveness:
@@ -116,7 +116,7 @@ spec:
         seccompProfile: { type: RuntimeDefault }
     service:
       app:
-        controller: onepassword-connect
+        controller: *app
         ports:
           http:
             port: *apiPort
