--- a/kubernetes/main/apps/external-secrets/onepassword/stores/clustersecretstore.yaml
+++ b/kubernetes/main/apps/external-secrets/onepassword/stores/clustersecretstore.yaml
@@ -3,16 +3,16 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
-  name: onepassword-connect
+  name: &app onepassword
 spec:
   provider:
     onepassword:
-      connectHost: http://onepassword-connect.external-secrets.svc.cluster.local
+      connectHost: http://onepassword.external-secrets.svc.cluster.local
       vaults:
         Kubernetes: 1
       auth:
         secretRef:
           connectTokenSecretRef:
-            name: onepassword-connect-secret
+            name: *app
             key: token
             namespace: external-secrets
