feat: update secret store name

--- a/kubernetes/main/apps/cert-manager/cert-manager/tls/pushsecret.yaml
+++ b/kubernetes/main/apps/cert-manager/cert-manager/tls/pushsecret.yaml
@@ -6,7 +6,7 @@ metadata:
   name: &name ${CLUSTER}-cluster-tls
 spec:
   secretStoreRefs:
-    - name: onepassword-connect
+    - name: onepassword
       kind: ClusterSecretStore
   selector:
     secret:
