--- a/kubernetes/main/apps/downloads/dashbrr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/downloads/dashbrr/app/externalsecret.yaml
@@ -34,7 +34,7 @@ spec:
     sourceRef: &onepass
        storeRef:
          kind: ClusterSecretStore
-         name: onepassword-connect
+         name: onepassword
   - extract:
       key: sonarr
     sourceRef: *onepass
