--- a/kubernetes/main/apps/downloads/prowlarr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/downloads/prowlarr/app/externalsecret.yaml
@@ -23,7 +23,7 @@ spec:
     sourceRef:
        storeRef:
          kind: ClusterSecretStore
-         name: onepassword-connect
+         name: onepassword
   - extract:
       key: postgres-pguser-prowlarr
     sourceRef:
