--- a/kubernetes/main/apps/media/jellyseerr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/media/jellyseerr/app/externalsecret.yaml
@@ -24,7 +24,7 @@ spec:
     sourceRef:
        storeRef:
          kind: ClusterSecretStore
-         name: onepassword-connect
+         name: onepassword
   - extract:
       key: postgres-pguser-jellyseerr
     sourceRef:
