--- a/kubernetes/main/apps/media/kyoo/app-template/externalsecret.yaml
+++ b/kubernetes/main/apps/media/kyoo/app-template/externalsecret.yaml
@@ -41,7 +41,7 @@ spec:
     sourceRef: &onepass
        storeRef:
          kind: ClusterSecretStore
-         name: onepassword-connect
+         name: onepassword
   - extract:
       key: kometa
     sourceRef: *onepass
