--- a/kubernetes/main/apps/observability/grafana/app/externalsecret.yaml
+++ b/kubernetes/main/apps/observability/grafana/app/externalsecret.yaml
@@ -28,7 +28,7 @@ spec:
     sourceRef:
        storeRef:
          kind: ClusterSecretStore
-         name: onepassword-connect
+         name: onepassword
   - extract:
       key: postgres-pguser-grafana
     sourceRef:
