--- a/kubernetes/main/apps/self-hosted/paperless/app/externalsecret.yaml
+++ b/kubernetes/main/apps/self-hosted/paperless/app/externalsecret.yaml
@@ -42,7 +42,7 @@ spec:
     sourceRef:
        storeRef:
          kind: ClusterSecretStore
-         name: onepassword-connect
+         name: onepassword
   - extract:
        key: postgres-pguser-paperless
     sourceRef:
