--- a/kubernetes/main/apps/downloads/bazarr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/downloads/bazarr/app/externalsecret.yaml
@@ -24,7 +24,7 @@ spec:
     sourceRef: &onepass
        storeRef:
          kind: ClusterSecretStore
-         name: onepassword-connect
+         name: onepassword
   - extract:
       key: plex
     sourceRef: *onepass
