--- a/kubernetes/utility/apps/external-secrets/kustomization.yaml
+++ b/kubernetes/utility/apps/external-secrets/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - ../../../shared/templates/alerts
   # Flux-Kustomizations
   - ./external-secrets/ks.yaml
-  - ./onepassword-connect/ks.yaml
+  - ./onepassword/ks.yaml
 transformers:
   - |-
     apiVersion: builtin
