fix: update store name

--- a/kubernetes/main/apps/downloads/dashbrr/ks.yaml
+++ b/kubernetes/main/apps/downloads/dashbrr/ks.yaml
@@ -13,7 +13,7 @@ spec:
   dependsOn:
     - name: crunchy-postgres-operator-cluster
     - name: crunchy-postgres-stores
-    - name: onepassword-store
+    - name: onepassword
   path: ./kubernetes/main/apps/downloads/dashbrr/app
   prune: true
   sourceRef:
