--- a/kubernetes/main/apps/downloads/recyclarr/ks.yaml
+++ b/kubernetes/main/apps/downloads/recyclarr/ks.yaml
@@ -13,7 +13,7 @@ spec:
   dependsOn:
     - name: radarr
     - name: sonarr
-    - name: onepassword-store
+    - name: onepassword
     - name: volsync
   path: ./kubernetes/main/apps/downloads/recyclarr/app
   prune: true
