--- a/kubernetes/main/apps/games/minecraft/ks.yaml
+++ b/kubernetes/main/apps/games/minecraft/ks.yaml
@@ -31,7 +31,7 @@ spec:
 #     labels:
 #       app.kubernetes.io/name: *app
 #   dependsOn:
-#     - name: onepassword-store
+#     - name: onepassword
 #   path: ./kubernetes/main/apps/games/minecraft/vibecraft
 #   prune: true
 #   sourceRef:
@@ -57,7 +57,7 @@ spec:
 #     labels:
 #       app.kubernetes.io/name: *app
 #   dependsOn:
-#     - name: onepassword-store
+#     - name: onepassword
 #   path: ./kubernetes/main/apps/games/minecraft/create
 #   prune: true
 #   sourceRef:
@@ -83,7 +83,7 @@ spec:
 #     labels:
 #       app.kubernetes.io/name: *app
 #   dependsOn:
-#     - name: onepassword-store
+#     - name: onepassword
 #   path: ./kubernetes/main/apps/games/minecraft/takocraft
 #   prune: true
 #   sourceRef:
