--- a/kubernetes/main/apps/network/internal/ks.yaml
+++ b/kubernetes/main/apps/network/internal/ks.yaml
@@ -12,7 +12,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
   path: ./kubernetes/main/apps/network/internal/external-dns
   prune: true
   sourceRef:
