--- a/kubernetes/main/apps/security/authentik/ks.yaml
+++ b/kubernetes/main/apps/security/authentik/ks.yaml
@@ -14,7 +14,7 @@ spec:
     - name: crunchy-postgres-operator-cluster
     - name: crunchy-postgres-stores
     - name: dragonfly-cluster
-    - name: onepassword-store
+    - name: onepassword
   path: ./kubernetes/main/apps/security/authentik/app
   prune: true
   sourceRef:
