--- a/kubernetes/utility/apps/home-automation/zigbee2mqtt/ks.yaml
+++ b/kubernetes/utility/apps/home-automation/zigbee2mqtt/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
     - name: volsync
   path: ./kubernetes/utility/apps/home-automation/zigbee2mqtt/app
   prune: true
