--- a/kubernetes/main/apps/cert-manager/cert-manager/ks.yaml
+++ b/kubernetes/main/apps/cert-manager/cert-manager/ks.yaml
@@ -31,7 +31,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
   path: ./kubernetes/main/apps/cert-manager/cert-manager/issuers
   prune: true
   sourceRef:
@@ -54,7 +54,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cert-manager-issuers
-    - name: onepassword-store
+    - name: onepassword
   path: ./kubernetes/main/apps/cert-manager/cert-manager/tls
   prune: true
   sourceRef:
