--- a/kubernetes/main/apps/database/crunchy-postgres/ks.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/ks.yaml
@@ -32,7 +32,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: crunchy-postgres-operator
-    - name: onepassword-store
+    - name: onepassword
   path: ./kubernetes/main/apps/database/crunchy-postgres/cluster
   prune: true
   sourceRef:
