--- a/kubernetes/main/apps/network/external/ks.yaml
+++ b/kubernetes/main/apps/network/external/ks.yaml
@@ -12,7 +12,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: external-dns-cloudflare
-    - name: onepassword-store
+    - name: onepassword
   path: ./kubernetes/main/apps/network/external/cloudflared
   prune: true
   sourceRef:
@@ -55,7 +55,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
   path: ./kubernetes/main/apps/network/external/external-dns
   prune: true
   sourceRef:
