--- a/kubernetes/main/apps/rook-ceph/rook-ceph/ks.yaml
+++ b/kubernetes/main/apps/rook-ceph/rook-ceph/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
   path: ./kubernetes/main/apps/rook-ceph/rook-ceph/app
   prune: false # never should be deleted
   sourceRef:
