--- a/kubernetes/main/apps/self-hosted/homepage/ks.yaml
+++ b/kubernetes/main/apps/self-hosted/homepage/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
   path: ./kubernetes/main/apps/self-hosted/homepage/app
   prune: true
   sourceRef:
