--- a/kubernetes/utility/apps/observability/kube-prometheus-stack/ks.yaml
+++ b/kubernetes/utility/apps/observability/kube-prometheus-stack/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
   path: ./kubernetes/utility/apps/observability/kube-prometheus-stack/app
   prune: true
   sourceRef:
