Revert "fix: update store name"
This reverts commit 5512a621c47de5ba07c4bd4f9f2901ebb4df7388.

--- a/kubernetes/main/apps/downloads/bazarr/ks.yaml
+++ b/kubernetes/main/apps/downloads/bazarr/ks.yaml
@@ -13,7 +13,7 @@ spec:
   dependsOn:
     - name: crunchy-postgres-operator-cluster
     - name: crunchy-postgres-stores
-    - name: onepassword
+    - name: onepassword-store
     - name: volsync
   path: ./kubernetes/main/apps/downloads/bazarr/app
   prune: true
