--- a/kubernetes/main/apps/flux-system/weave-gitops/ks.yaml
+++ b/kubernetes/main/apps/flux-system/weave-gitops/ks.yaml
@@ -12,7 +12,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: authentik
-    - name: onepassword
+    - name: onepassword-store
   path: ./kubernetes/main/apps/flux-system/weave-gitops/app
   prune: true
   sourceRef:
