--- a/kubernetes/main/apps/media/kyoo/ks.yaml
+++ b/kubernetes/main/apps/media/kyoo/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword
+    - name: onepassword-store
     - name: volsync
   path: ./kubernetes/main/apps/media/kyoo/app
   prune: true
@@ -39,7 +39,7 @@ spec:
 #     labels:
 #       app.kubernetes.io/name: *app
 #   dependsOn:
-#     - name: onepassword
+#     - name: onepassword-store
 #     - name: volsync
 #   path: ./kubernetes/main/apps/media/kyoo/app-template
 #   prune: true
