--- a/kubernetes/main/apps/media/your-spotify/ks.yaml
+++ b/kubernetes/main/apps/media/your-spotify/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword
+    - name: onepassword-store
     - name: volsync
   path: ./kubernetes/main/apps/media/your-spotify/app
   prune: true
