--- a/kubernetes/utility/apps/network/external/ks.yaml
+++ b/kubernetes/utility/apps/network/external/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword
+    - name: onepassword-store
   path: ./kubernetes/utility/apps/network/external/cloudflare-ddns
   prune: true
   sourceRef:
@@ -34,7 +34,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: external-dns-cloudflare
-    - name: onepassword
+    - name: onepassword-store
   path: ./kubernetes/utility/apps/network/external/cloudflared
   prune: true
   sourceRef:
@@ -76,7 +76,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword
+    - name: onepassword-store
   path: ./kubernetes/utility/apps/network/external/external-dns
   prune: true
   sourceRef:
