--- a/kubernetes/utility/apps/self-hosted/free-game-notifier/ks.yaml
+++ b/kubernetes/utility/apps/self-hosted/free-game-notifier/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword
+    - name: onepassword-store
   path: ./kubernetes/utility/apps/self-hosted/free-game-notifier/app
   prune: true
   sourceRef:
