--- a/kubernetes/main/apps/media/plex/ks.yaml
+++ b/kubernetes/main/apps/media/plex/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword
+    - name: onepassword-store
     - name: volsync
   path: ./kubernetes/main/apps/media/plex/app
   prune: true
@@ -44,7 +44,7 @@ spec:
     - name: tautulli
     - name: radarr
     - name: sonarr
-    - name: onepassword
+    - name: onepassword-store
     - name: volsync
   path: ./kubernetes/main/apps/media/plex/kometa
   prune: true
@@ -119,7 +119,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: plex
-    - name: onepassword
+    - name: onepassword-store
   path: ./kubernetes/main/apps/media/plex/plex-image-cleanup
   prune: true
   sourceRef:
