--- a/kubernetes/main/apps/self-hosted/atuin/ks.yaml
+++ b/kubernetes/main/apps/self-hosted/atuin/ks.yaml
@@ -13,7 +13,7 @@ spec:
   dependsOn:
     - name: crunchy-postgres-operator-cluster
     - name: crunchy-postgres-stores
-    - name: onepassword
+    - name: onepassword-store
   path: ./kubernetes/main/apps/self-hosted/atuin/app
   prune: true
   sourceRef:
