--- a/kubernetes/main/apps/self-hosted/paperless/ks.yaml
+++ b/kubernetes/main/apps/self-hosted/paperless/ks.yaml
@@ -13,7 +13,7 @@ spec:
   dependsOn:
     - name: crunchy-postgres-stores
     - name: dragonfly-cluster
-    - name: onepassword
+    - name: onepassword-store
     - name: volsync
   path: ./kubernetes/main/apps/self-hosted/paperless/app
   prune: true
