--- a/kubernetes/utility/apps/external-secrets/onepassword/ks.yaml
+++ b/kubernetes/utility/apps/external-secrets/onepassword/ks.yaml
@@ -23,7 +23,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app external-secrets-stores
+  name: &app onepassword-store
   namespace: flux-system
 spec:
   targetNamespace: external-secrets
