feat: update store name

--- a/kubernetes/main/apps/database/crunchy-postgres/cluster/externalsecret.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/cluster/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name crunchy-pgo-secret
+  name: &name crunchy-postgres
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
