--- a/kubernetes/main/apps/media/kyoo/app-template/externalsecret.yaml
+++ b/kubernetes/main/apps/media/kyoo/app-template/externalsecret.yaml
@@ -50,4 +50,4 @@ spec:
     sourceRef:
        storeRef:
          kind: ClusterSecretStore
-         name: crunchy-pgo-secrets
+         name: crunchy-postgres
