--- a/kubernetes/main/apps/self-hosted/paperless/app/externalsecret.yaml
+++ b/kubernetes/main/apps/self-hosted/paperless/app/externalsecret.yaml
@@ -47,5 +47,5 @@ spec:
        key: postgres-pguser-paperless
     sourceRef:
        storeRef:
-          name: crunchy-pgo-secrets
+          name: crunchy-postgres
           kind: ClusterSecretStore
