--- a/kubernetes/main/apps/downloads/dashbrr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/downloads/dashbrr/app/externalsecret.yaml
@@ -58,4 +58,4 @@ spec:
     sourceRef:
        storeRef:
          kind: ClusterSecretStore
-         name: crunchy-pgo-secrets
+         name: crunchy-postgres
