--- a/kubernetes/main/apps/downloads/prowlarr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/downloads/prowlarr/app/externalsecret.yaml
@@ -29,4 +29,4 @@ spec:
     sourceRef:
        storeRef:
          kind: ClusterSecretStore
-         name: crunchy-pgo-secrets
+         name: crunchy-postgres
