--- a/kubernetes/main/apps/media/kyoo/app/externalsecret.yaml
+++ b/kubernetes/main/apps/media/kyoo/app/externalsecret.yaml
@@ -41,4 +41,4 @@ spec:
     sourceRef:
        storeRef:
          kind: ClusterSecretStore
-         name: crunchy-pgo-secrets
+         name: crunchy-postgres
