--- a/kubernetes/main/apps/observability/gatus/app/externalsecret.yaml
+++ b/kubernetes/main/apps/observability/gatus/app/externalsecret.yaml
@@ -26,4 +26,4 @@ spec:
     sourceRef:
        storeRef:
          kind: ClusterSecretStore
-         name: crunchy-pgo-secrets
+         name: crunchy-postgres
