--- a/kubernetes/main/apps/self-hosted/atuin/app/externalsecret.yaml
+++ b/kubernetes/main/apps/self-hosted/atuin/app/externalsecret.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   refreshInterval: 1m
   secretStoreRef:
-    name: crunchy-pgo-secrets
+    name: crunchy-postgres
     kind: ClusterSecretStore
   target:
     name: *name
