--- a/kubernetes/main/apps/self-hosted/lubelog/app/externalsecret.yaml
+++ b/kubernetes/main/apps/self-hosted/lubelog/app/externalsecret.yaml
@@ -31,4 +31,4 @@ spec:
     sourceRef:
        storeRef:
          kind: ClusterSecretStore
-         name: crunchy-pgo-secrets
+         name: crunchy-postgres
