chore: rename secret

--- a/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
@@ -118,7 +118,7 @@ spec:
     pgbackrest:
       configuration: &backupConfig
         - secret:
-            name: crunchy-pgo-secret
+            name: crunchy-postgres
       global: &backupFlag
         # Global
         compress-type: "bz2"
